Add security analysis and automated refactoring tools to Maven configuration